--- a/myfridge/pubspec.yaml
+++ b/myfridge/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   firebase_core: ^2.13.0
+  cloud_firestore: ^4.7.1
+  firebase_auth: ^4.6.1
+  google_sign_in: ^6.1.2
 
 dev_dependencies:
   flutter_test:
