--- a/myfridge/pubspec.yaml
+++ b/myfridge/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   google_sign_in: ^6.1.2
   tab_container: ^2.0.0
   flutter_vector_icons: ^2.0.0
+  flutter_qr_bar_scanner: ^3.0.2
+  flutter_beep: ^1.0.0
+  flutter_vibrate: ^1.3.0
+  wakelock: ^0.6.2
 
 dev_dependencies:
   flutter_test:
