--- a/myfridge/pubspec.yaml
+++ b/myfridge/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   firebase_core: ^2.13.0
-  cloud_firestore: ^4.7.1
+  cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.2
   tab_container: ^2.0.0
   flutter_vector_icons: ^2.0.0
+  intl: ^0.18.1
+  calendar_date_picker2: ^0.5.2
 
 dev_dependencies:
   flutter_test:
