--- a/myfridge/ios/Runner/Info.plist
+++ b/myfridge/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>앱에서 카메라를 사용하여 바코드를 스캔합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs photos access to get Barcode from photo library</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
