--- a/myfridge/pubspec.yaml
+++ b/myfridge/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_beep: ^1.0.0
   flutter_vibrate: ^1.3.0
   wakelock: ^0.6.2
+  mobile_scanner: ^3.2.0
 
 dev_dependencies:
   flutter_test:
