--- a/myfridge/pubspec.yaml
+++ b/myfridge/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_vibrate: ^1.3.0
   wakelock: ^0.6.2
   mobile_scanner: ^3.2.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
