--- a/myfridge/macos/Runner/Configs/AppInfo.xcconfig
+++ b/myfridge/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = myfridge
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.myfridge
+PRODUCT_BUNDLE_IDENTIFIER = com.myfridge.myfridge
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.myfridge. All rights reserved.
