--- a/myfridge/windows/runner/Runner.rc
+++ b/myfridge/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.myfridge" "\0"
             VALUE "FileDescription", "myfridge" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "myfridge" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.myfridge. All rights reserved." "\0"
             VALUE "OriginalFilename", "myfridge.exe" "\0"
             VALUE "ProductName", "myfridge" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
